--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ animation: blinker 2s linear infinite;
     <p style="font-size:11px">-Morattu Single-</p>
   </div>
   <div class="hyperlink">
-    <!--  https://myfav69.github.io/  maintenance/#    -->
-    <h3><a href="https://myfav69.github.io/morattusingle/DataBase/Angel/Angel1.html">Enter 18+</a></h3>
+    <!--  https://myfav69.github.io/ morattusingle/DataBase/Angel/Angel1.html     -->
+    <h3><a href="https://myfav69.github.io/maintenance/#">Enter 18+</a></h3>
   </div>
   <div class="para">
     <p>Copyright &#169; 2020 MorattuSingle, Ind.</p>
