--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body{
   background-color: black;
 }
 .hero-image {
-  background-image: url('butterfly.jpg');
+  background-image: url('https://myfav69.github.io/freexxx/butterfly.jpg');
   height: 192mm;
   background-position: center;
   background-repeat: no-repeat;
@@ -50,6 +50,16 @@ body{
   left: 13vw;
   color: grey;
 }
+.insta{
+position: absolute;
+top: 10%;
+left: 10%;
+}
+.but{
+  background-color: Transparent;
+  border: none;
+  color: #DA70D6;
+}
 a{
     -webkit-appearance: button;
     -moz-appearance: button;
@@ -70,12 +80,24 @@ animation: blinker 2s linear infinite;
     <p style="font-size:11px">-Morattu Single-</p>
   </div>
   <div class="hyperlink">
-    <!--  https://myfav69.github.io/  maintenance/#      -->
-    <h3><a href="https://myfav69.github.io/morattusingle/DataBase/Angel/Angel1.html">Enter 18+</a></h3>
+    <!--  https://myfav69.github.io/     morattusingle/DataBase/Angel/Angel1.html   -->
+    <h3><a href="https://myfav69.github.io/maintenance/#">Enter 18+</a></h3>
   </div>
   <div class="para">
     <p>Copyright &#169; 2020 MorattuSingle, Ind.</p>
   </div>
+<div class="insta">
+<button class="but" onclick="handleAbout()">
+<i style="font-size:24px" class="fa">@!'-'</i>
+</button>
+</div>
 </div>
 </body>
+<script>
+ function handleAbout() {
+   let link = document.createElement('a');
+   link.href = "https://myfav69.github.io/morattusingle/DataBase/About/About.html";
+   link.click();
+ }
+</script>
 </html>
