--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ animation: blinker 2s linear infinite;
     <p style="font-size:11px">-Morattu Single-</p>
   </div>
   <div class="hyperlink">
-    <!--  https://myfav69.github.io/     morattusingle/DataBase/Angel/Angel1.html   -->
-    <h3><a href="https://myfav69.github.io/maintenance/#">Enter 18+</a></h3>
+    <!--  https://myfav69.github.io/   maintenance/#     -->
+    <h3><a onclick="handleEnter()">Enter 18+</a></h3>
   </div>
   <div class="para">
     <p>Copyright &#169; 2020 MorattuSingle, Ind.</p>
@@ -97,6 +97,13 @@ animation: blinker 2s linear infinite;
  function handleAbout() {
    let link = document.createElement('a');
    link.href = "https://myfav69.github.io/morattusingle/DataBase/About/About.html";
+   /*link.href = "https://myfav69.github.io/maintenance/#"*/
+   link.click();
+ }
+ function handleEnter() {
+   let link = document.createElement('a');
+   link.href = "https://myfav69.github.io/morattusingle/DataBase/Angel/Angel1.html";
+   /*link.href = "https://myfav69.github.io/maintenance/#"*/
    link.click();
  }
 </script>
