--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ animation: blinker 2s linear infinite;
  }
  function handleEnter() {
    let link = document.createElement('a');
-   /*link.href = "https://myfav69.github.io/morattusingle/DataBase/Angel/Angel1.html";*/
-   link.href = "https://myfav69.github.io/maintenance/#"
+   link.href = "https://myfav69.github.io/morattusingle/DataBase/Menu/Menu.html";
+   /*link.href = "https://myfav69.github.io/maintenance/#"*/
    link.click();
  }
 </script>
