--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@ left: 10%;
   border: none;
   color: #DA70D6;
 }
+.about-img{
+  width: 40px;
+  height: 40px;
+  opacity: 80%;
+}
+.about-img:hover{
+  opacity: 100%;
+}
 a{
     -webkit-appearance: button;
     -moz-appearance: button;
@@ -87,17 +95,15 @@ animation: blinker 2s linear infinite;
     <p>Copyright &#169; 2020 MorattuSingle, Ind.</p>
   </div>
 <div class="insta">
-<button class="but" onclick="handleAbout()">
-<i style="font-size:24px" class="fa">@!'-'</i>
-</button>
+<button class="but" onclick="handleAbout()"><img class="about-img" src="https://myfav69.github.io/freexxx/about.png" alt="about"/></button>
 </div>
 </div>
 </body>
 <script>
  function handleAbout() {
    let link = document.createElement('a');
-   /*link.href = "https://myfav69.github.io/morattusingle/DataBase/About/About.html";*/
-   link.href = "https://myfav69.github.io/maintenance/#"
+   link.href = "https://myfav69.github.io/morattusingle/DataBase/About/About.html";
+   /*link.href = "https://myfav69.github.io/maintenance/#"*/
    link.click();
  }
  function handleEnter() {
