--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@ animation: blinker 2s linear infinite;
 <script>
  function handleAbout() {
    let link = document.createElement('a');
-   link.href = "https://myfav69.github.io/morattusingle/DataBase/About/About.html";
-   /*link.href = "https://myfav69.github.io/maintenance/#"*/
+   /*link.href = "https://myfav69.github.io/morattusingle/DataBase/About/About.html";*/
+   link.href = "https://myfav69.github.io/maintenance/#"
    link.click();
  }
  function handleEnter() {
    let link = document.createElement('a');
-   link.href = "https://myfav69.github.io/morattusingle/DataBase/Menu/Menu.html";
-   /*link.href = "https://myfav69.github.io/maintenance/#"*/
+   /*link.href = "https://myfav69.github.io/morattusingle/DataBase/Menu/Menu.html";*/
+   link.href = "https://myfav69.github.io/maintenance/#"
    link.click();
  }
 </script>
