--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ animation: blinker 2s linear infinite;
    link.click();
    sessionStorage.setItem('tokenAuth', tokenAuth);
    sessionStorage.setItem('GlobalSearchBGimg',GlobalSearchBGimg);
-   sessionStorage.setItem('GlobalVideoList', JSON.parse(GlobalVideoList).reverse());
+   let reverseVideoList = JSON.stringify(JSON.parse(GlobalVideoList).reverse());
+   sessionStorage.setItem('GlobalVideoList',reverseVideoList);
    sessionStorage.setItem('GlobalMenuList', GlobalMenuList);
    sessionStorage.setItem('screenPageCount', screenPageCount);
  }
